--- a/CustomRPC/MainForm.es.resx
+++ b/CustomRPC/MainForm.es.resx
@@ -118,101 +118,101 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>Double cliquez sur l'icône pour la montrer à nouveau, ou clique droit pour quitter.</value>
+    <value>Hacer doble click en el icono para ver de nuevo, o click derecho para salir.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>L'application tournera dans la barre d'état système.</value>
+    <value>La aplicación se ejecutara en la bandeja.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>143, 22</value>
+    <value>133, 22</value>
   </data>
   <data name="openToolStripMenuItem.Text" xml:space="preserve">
-    <value>Ouvrir</value>
+    <value>Abrir</value>
   </data>
   <data name="trayMenuReconnect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>143, 22</value>
+    <value>133, 22</value>
   </data>
   <data name="trayMenuReconnect.Text" xml:space="preserve">
-    <value>Reconnexion</value>
+    <value>Reconectar</value>
   </data>
   <data name="toolStripSeparatorTray1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>140, 6</value>
+    <value>130, 6</value>
   </data>
   <data name="trayMenuQuit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>143, 22</value>
+    <value>133, 22</value>
   </data>
   <data name="trayMenuQuit.Text" xml:space="preserve">
-    <value>Quitter</value>
+    <value>Salir</value>
   </data>
   <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>144, 76</value>
+    <value>134, 76</value>
   </data>
   <data name="loadPresetToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>277, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="loadPresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>Charger une configuration</value>
+    <value>Cargar Ajustes</value>
   </data>
   <data name="savePresetToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>277, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="savePresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>Sauvegarder une configuration</value>
+    <value>Guardar Ajustes</value>
   </data>
   <data name="toolStripSeparatorFile1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>274, 6</value>
+    <value>194, 6</value>
   </data>
   <data name="uploadAssetsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>277, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="uploadAssetsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Mettre en ligne des ressources</value>
+    <value>Subir Recursos</value>
   </data>
   <data name="toolStripSeparatorFile2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>274, 6</value>
+    <value>194, 6</value>
   </data>
   <data name="quitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>277, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
-    <value>Quitter</value>
+    <value>Salir</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>54, 20</value>
+    <value>60, 20</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Fichier</value>
+    <value>Archivo</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>193, 22</value>
+    <value>217, 22</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
-    <value>Lancer au démarrage</value>
+    <value>Abrir al iniciar el ordenador</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>193, 22</value>
+    <value>217, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>Démarrer minimisé</value>
+    <value>Iniciar Minimizado</value>
   </data>
   <data name="toolStripSeparatorSettings1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>190, 6</value>
+    <value>214, 6</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>193, 22</value>
+    <value>217, 22</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Vérifier les mises à jour</value>
+    <value>Buscar Actualizaciones</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>190, 6</value>
+    <value>214, 6</value>
   </data>
   <data name="defaultToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>153, 22</value>
   </data>
   <data name="defaultToolStripMenuItem.Text" xml:space="preserve">
-    <value>Défaut</value>
+    <value>Por defecto</value>
   </data>
   <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
     <value>150, 6</value>
@@ -269,204 +269,204 @@
     <value>153, 22</value>
   </data>
   <data name="languageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>193, 22</value>
+    <value>217, 22</value>
   </data>
   <data name="languageToolStripMenuItem.Text" xml:space="preserve">
-    <value>Langage</value>
+    <value>Idioma</value>
   </data>
   <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>78, 20</value>
+    <value>95, 20</value>
   </data>
   <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Paramètres</value>
+    <value>Configuración</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>202, 22</value>
+    <value>203, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>Ouvrir le manuel</value>
+    <value>Abrir el Manual</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>202, 22</value>
+    <value>203, 22</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Text" xml:space="preserve">
-    <value>Page github</value>
+    <value>Pagina de GitHub</value>
   </data>
   <data name="toolStripSeparatorHelp1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>199, 6</value>
+    <value>200, 6</value>
   </data>
   <data name="translatorsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>202, 22</value>
+    <value>203, 22</value>
   </data>
   <data name="translatorsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Traducteurs</value>
+    <value>Traductores</value>
   </data>
   <data name="toolStripSeparatorHelp2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>199, 6</value>
+    <value>200, 6</value>
   </data>
   <data name="checkForUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>202, 22</value>
+    <value>203, 22</value>
   </data>
   <data name="checkForUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Vérifier les mises à jour...</value>
+    <value>Buscar Actualizaciones...</value>
   </data>
   <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>202, 22</value>
+    <value>203, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>À propos...</value>
+    <value>Acerca de...</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>43, 20</value>
+    <value>53, 20</value>
   </data>
   <data name="helpToolStripMenuItem.Text" xml:space="preserve">
-    <value>Aide</value>
+    <value>Ayuda</value>
   </data>
   <data name="downloadUpdateToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 20</value>
+    <value>145, 20</value>
   </data>
   <data name="downloadUpdateToolStripMenuItem.Text" xml:space="preserve">
-    <value>Télécharger la mise à jour</value>
+    <value>Descargar Actualización</value>
   </data>
   <data name="buttonUpdatePresence.Text" xml:space="preserve">
-    <value>Mettre à jour la présence</value>
+    <value>Actualizar Presencia</value>
   </data>
   <data name="buttonUpdatePresence.ToolTip" xml:space="preserve">
-    <value>Mettre à jour la présence.</value>
+    <value>Actualiza la Presencia.</value>
   </data>
   <data name="buttonConnect.Location" type="System.Drawing.Point, System.Drawing">
-    <value>232, 50</value>
+    <value>234, 50</value>
   </data>
   <data name="buttonConnect.Text" xml:space="preserve">
-    <value>Connexion</value>
+    <value>Conectar</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
-    <value>Lier l'application dont l'ID est spécifié à une présence définie.</value>
+    <value>Vincula la aplicación a el ID especificado con la presencia establecida.</value>
   </data>
   <data name="buttonDisconnect.Location" type="System.Drawing.Point, System.Drawing">
-    <value>329, 50</value>
+    <value>332, 50</value>
   </data>
   <data name="buttonDisconnect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>86, 24</value>
+    <value>83, 24</value>
   </data>
   <data name="buttonDisconnect.Text" xml:space="preserve">
-    <value>Déconnexion</value>
+    <value>Desconectar</value>
   </data>
   <data name="buttonDisconnect.ToolTip" xml:space="preserve">
-    <value>Déconnecter l'app de discord. Prenez en note que cela peut prendre un moment.</value>
+    <value>Desconecta la aplicación de Discord. Toma en cuenta que esto puede tardar un rato.</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
-    <value>ID de l'application depuis le site développeur de discord.</value>
+    <value>ID de la aplicación del sitio de Desarrolladores de Discord.</value>
   </data>
   <data name="labelDetails.ToolTip" xml:space="preserve">
-    <value>Première ligne de la présence.</value>
+    <value>Primer renglón en la presencia.</value>
   </data>
   <data name="labelState.ToolTip" xml:space="preserve">
-    <value>Seconde ligne de la présence.</value>
+    <value>Segundo renglón en la presencia.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Nom de la ressource pour la petite image.</value>
+    <value>Nombre del recurso para la imagen pequeña.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
-    <value>Texte affiché quand la souris survole la petite image.</value>
+    <value>Texto que se muestra al arrastrar el mouse sobre la imagen pequeña.</value>
   </data>
   <data name="labelLargeText.ToolTip" xml:space="preserve">
-    <value>Texte affiché quand la souris survole la grande image.</value>
+    <value>Texto que se muestra al arrastrar el mouse sobre la imagen grande.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Nom de la resource pour la grande image.</value>
+    <value>Nombre del recurso para la imagen grande.</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 14</value>
+    <value>100, 14</value>
   </data>
   <data name="labelSmall.Text" xml:space="preserve">
-    <value>Petite image</value>
+    <value>Imagen Pequeña</value>
   </data>
   <data name="labelSmall.ToolTip" xml:space="preserve">
-    <value>Image qui se montre en bas à droite de la grande image.</value>
+    <value>Imagen que aparece en la esquina derecha inferior de la imagen grande.</value>
   </data>
   <data name="labelLarge.Size" type="System.Drawing.Size, System.Drawing">
-    <value>82, 14</value>
+    <value>91, 14</value>
   </data>
   <data name="labelLarge.Text" xml:space="preserve">
-    <value>Grande image</value>
+    <value>Imagen Grande</value>
   </data>
   <data name="labelLarge.ToolTip" xml:space="preserve">
-    <value>Image qui se montre à gauche du texte définit au-dessus.</value>
+    <value>Imagen que aparece a la izquierda de el texto establecido arriba.</value>
   </data>
   <data name="radioButtonNone.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 18</value>
+    <value>70, 18</value>
   </data>
   <data name="radioButtonNone.Text" xml:space="preserve">
-    <value>Aucun</value>
+    <value>Ninguno</value>
   </data>
   <data name="radioButtonNone.ToolTip" xml:space="preserve">
-    <value>Pas d'horodatages définis.</value>
+    <value>Marcas de tiempo desactivadas.</value>
   </data>
   <data name="radioButtonStartTime.Size" type="System.Drawing.Size, System.Drawing">
-    <value>219, 18</value>
+    <value>189, 18</value>
   </data>
   <data name="radioButtonStartTime.Text" xml:space="preserve">
-    <value>Depuis que CustomRP a commencé</value>
+    <value>Desde que CustomRP se inicio</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
-    <value>Montre le temps qui s'est écoulé depuis le démarrage de l'app.</value>
+    <value>Muestra el tiempo desde que la aplicación se inicio.</value>
   </data>
   <data name="radioButtonLocalTime.Size" type="System.Drawing.Size, System.Drawing">
-    <value>121, 18</value>
+    <value>95, 18</value>
   </data>
   <data name="radioButtonLocalTime.Text" xml:space="preserve">
-    <value>Votre temps local</value>
+    <value>Tu hora local</value>
   </data>
   <data name="radioButtonLocalTime.ToolTip" xml:space="preserve">
-    <value>Montre votre temps actuel dans un format de 24 heures.</value>
+    <value>Muestra tu hora local en el formato de 24 horas.</value>
   </data>
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
-    <value>Définis l'horodotage pour le status, qui se montre en dessus de tout le texte au dessus.
-Les timers de status ont une limite de 24h, ce qui signifie que après 24h, le temps reviendra à 00:00.</value>
+    <value>Establece una marca de tiempo para el estado, el cual aparece debajo de todo el texto de arriba.
+Los temporizadores de estado tienen un limite de 24 horas, esto quiere decir que después de 24 horas el tiempo regresara a 0:00.</value>
   </data>
   <data name="labelParty.ToolTip" xml:space="preserve">
-    <value>Nombre de joueurs dans le groupe, qui se montre à coté de "State".
-Pour prendre effet, les deux champs doivent être supérieurs à 0.</value>
+    <value>Cantidad de jugadores en el grupo actual que se muestra junto al campo del estado.
+Para que tome efecto, ambos campos deben ser mayores que 0.</value>
   </data>
   <data name="radioButtonCustom.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 18</value>
+    <value>191, 18</value>
   </data>
   <data name="radioButtonCustom.Text" xml:space="preserve">
-    <value>Horodotage personnalisé</value>
+    <value>Marca de tiempo personalizada</value>
   </data>
   <data name="radioButtonCustom.ToolTip" xml:space="preserve">
-    <value>Montre combien de temps s'est écoulé par rapport à la date spécifié.</value>
+    <value>Muestra el tiempo que ha pasado o hace falta para la fecha establecida.</value>
   </data>
   <data name="labelButton1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>58, 14</value>
+    <value>51, 14</value>
   </data>
   <data name="labelButton1.Text" xml:space="preserve">
-    <value>Bouton 1</value>
+    <value>Botón 1</value>
   </data>
   <data name="labelButton1.ToolTip" xml:space="preserve">
-    <value>Le premier des deux boutons qui se montre sous votre status dans la fenêtre popup et du coté droit de votre profile.</value>
+    <value>El primer de los dos botones que aparecen debajo de tu estado en la ventana de tu perfil y en lado derecho del perfil completo.</value>
   </data>
   <data name="labelButton2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>58, 14</value>
+    <value>51, 14</value>
   </data>
   <data name="labelButton2.Text" xml:space="preserve">
-    <value>Bouton 2</value>
+    <value>Botón 2</value>
   </data>
   <data name="labelButton2.ToolTip" xml:space="preserve">
-    <value>Deuxième bouton, qui apparait juste en dessous du premier, ou à l'emplacement du premier, si ce dernier n'est pas définis.</value>
+    <value>El segundo de los dos botones que aparecen debajo de tu estado en la ventana de tu perfil y en lado derecho del perfil completo.</value>
   </data>
   <data name="labelButton1URL.ToolTip" xml:space="preserve">
-    <value>URL vers laquelle l'utilisateur sera redirigé en cliquant sur le bouton.</value>
+    <value>URL al cual el usuario será dirigido al dar click al botón.</value>
   </data>
   <data name="labelButton2URL.ToolTip" xml:space="preserve">
-    <value>URL vers laquelle l'utilisateur sera redirigé en cliquant sur le bouton.</value>
+    <value>URL al cual el usuario será dirigido al dar click al botón.</value>
   </data>
   <data name="labelButton1Text.ToolTip" xml:space="preserve">
-    <value>Texte du premier bouton.</value>
+    <value>Etiqueta del primer botón.</value>
   </data>
   <data name="labelButton2Text.ToolTip" xml:space="preserve">
-    <value>Texte du deuxième bouton.</value>
+    <value>Etiqueta del segundo botón.</value>
   </data>
   <data name="labelPartyOf.Size" type="System.Drawing.Size, System.Drawing">
     <value>21, 14</value>
