--- a/CustomRPC/MainForm.pl.resx
+++ b/CustomRPC/MainForm.pl.resx
@@ -182,7 +182,7 @@
     <value>219, 22</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
-    <value>Uruchom podczas startu</value>
+    <value>Uruchom z systemem</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>219, 22</value>
@@ -224,7 +224,7 @@
     <value>Strona Github</value>
   </data>
   <data name="translatorsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Tłumaczący</value>
+    <value>Tłumacze</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>O programie...</value>
@@ -251,13 +251,13 @@
     <value>Połącz</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
-    <value>Łączy aplikację z określonym identyfikatorem z ustawioną obecnością.</value>
+    <value>Łączy aplikację z określonym ID z ustawioną obecnością.</value>
   </data>
   <data name="buttonDisconnect.Text" xml:space="preserve">
     <value>Rozłącz</value>
   </data>
   <data name="buttonDisconnect.ToolTip" xml:space="preserve">
-    <value>Rozłącza CustomRP od discorda (wyłączy status). Pamiętaj że to może chwilę zająć.</value>
+    <value>Rozłącza CustomRP od discorda (wyłączy status). Pamiętaj że to może chwilę potrwać.</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
     <value>ID aplikacji ze strony dla deweloperów discorda.</value>
@@ -287,7 +287,7 @@
     <value>Małe zdjęcie</value>
   </data>
   <data name="labelSmall.ToolTip" xml:space="preserve">
-    <value>Zdjęcie które pojawia się w prawym dolnym rogu dużego zdjęcia.</value>
+    <value>Zdjęcie, które pojawia się w prawym dolnym rogu dużego zdjęcia.</value>
   </data>
   <data name="labelLarge.Size" type="System.Drawing.Size, System.Drawing">
     <value>74, 14</value>
@@ -311,7 +311,7 @@
     <value>270, 18</value>
   </data>
   <data name="radioButtonStartTime.Text" xml:space="preserve">
-    <value>Od momentu kiedy CustromRP wystartowało</value>
+    <value>Od momentu kiedy CustomRP wystartowało</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
     <value>Pokazuje ile czasu upłynęło od startu aplikacji.</value>
