--- a/CustomRPC/MainForm.ku.resx
+++ b/CustomRPC/MainForm.ku.resx
@@ -118,361 +118,304 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>اضغط ضغطتين علي ايقونة لاظهارها مجددا او زر فارة الايمن للخروج.</value>
+    <value>دوو جار کلیک بکە لە ئایکۆنەکە بۆ دووبارە بینین، یاخود کلیکی ڕاست بۆ داخستن.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>هذا التطبيق سيعمل في الخلفيه.</value>
+    <value>بەرنامەکە لە ترەیدا ئیش دەکا.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>140, 76</value>
+    <value>161, 76</value>
   </data>
   <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 22</value>
+    <value>160, 22</value>
   </data>
   <data name="openToolStripMenuItem.Text" xml:space="preserve">
-    <value>قتح</value>
+    <value>کردنەوە</value>
   </data>
   <data name="trayMenuReconnect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 22</value>
+    <value>160, 22</value>
   </data>
   <data name="trayMenuReconnect.Text" xml:space="preserve">
-    <value>اعادة الاتصال</value>
+    <value>پەیوەندی کردنەوە</value>
   </data>
   <data name="toolStripSeparatorTray1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>136, 6</value>
+    <value>157, 6</value>
   </data>
   <data name="trayMenuQuit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 22</value>
+    <value>160, 22</value>
   </data>
   <data name="trayMenuQuit.Text" xml:space="preserve">
-    <value>اغلاق</value>
+    <value>دەرچوون</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>42, 20</value>
+    <value>40, 20</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>ملف</value>
+    <value>فایل</value>
   </data>
   <data name="loadPresetToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 22</value>
+    <value>228, 22</value>
   </data>
   <data name="loadPresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>اعدادات محدده مسبقا</value>
+    <value>دانانی فایلی پێشوەخت</value>
   </data>
   <data name="savePresetToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 22</value>
+    <value>228, 22</value>
   </data>
   <data name="savePresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>حفظ اعدادات محدده</value>
+    <value>خەزنکردنی فایل</value>
   </data>
   <data name="toolStripSeparatorFile1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>221, 6</value>
+    <value>225, 6</value>
   </data>
   <data name="uploadAssetsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 22</value>
+    <value>228, 22</value>
   </data>
   <data name="uploadAssetsToolStripMenuItem.Text" xml:space="preserve">
-    <value>رفع المساعدات</value>
+    <value>بڵاوکردنەی فایل</value>
   </data>
   <data name="toolStripSeparatorFile2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>221, 6</value>
+    <value>225, 6</value>
   </data>
   <data name="quitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>224, 22</value>
+    <value>228, 22</value>
   </data>
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
-    <value>خروج</value>
+    <value>دەرچوون</value>
   </data>
   <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>58, 20</value>
+    <value>83, 20</value>
   </data>
   <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>اعدادات</value>
+    <value>ڕێکخستنەکان</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
-    <value>تشغيل عند البدء</value>
+    <value>کار کردن لە کاتی داگرسان</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>البدء المصغر</value>
+    <value>داگرسان بە بچووکراوەیی</value>
   </data>
   <data name="toolStripSeparatorSettings1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 6</value>
+    <value>194, 6</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>التحقق من التحديثات</value>
+    <value>گەڕان بۆ نوێکردنەوە</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 6</value>
+    <value>194, 6</value>
   </data>
   <data name="languageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
+    <value>197, 22</value>
   </data>
   <data name="languageToolStripMenuItem.Text" xml:space="preserve">
-    <value>اللغة</value>
-  </data>
-  <data name="defaultToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
+    <value>زمان</value>
   </data>
   <data name="defaultToolStripMenuItem.Text" xml:space="preserve">
-    <value>الطبيعي</value>
-  </data>
-  <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>150, 6</value>
-  </data>
-  <data name="agERToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="csToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="deToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="enToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="frToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="heToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="itToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="ltToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="nlToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="plToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="ptBRToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="ruToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="thToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="viToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="zhhansToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="zhhantToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
+    <value>بنەڕەت</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 20</value>
+    <value>57, 20</value>
   </data>
   <data name="helpToolStripMenuItem.Text" xml:space="preserve">
-    <value>المساعدة</value>
+    <value>یارمەتی</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 22</value>
+    <value>231, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>فتح الارشادات</value>
+    <value>کردنەوەی چۆنێتی بەکارهێنان</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 22</value>
+    <value>231, 22</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Text" xml:space="preserve">
-    <value>صفحه GitHub</value>
+    <value>پەڕەی گیتهەب</value>
   </data>
   <data name="toolStripSeparatorHelp1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>173, 6</value>
+    <value>228, 6</value>
   </data>
   <data name="translatorsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 22</value>
+    <value>231, 22</value>
   </data>
   <data name="translatorsToolStripMenuItem.Text" xml:space="preserve">
-    <value>المترجممين</value>
+    <value>زمانەکان</value>
   </data>
   <data name="toolStripSeparatorHelp2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>173, 6</value>
+    <value>228, 6</value>
   </data>
   <data name="checkForUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 22</value>
+    <value>231, 22</value>
   </data>
   <data name="checkForUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>تحقق من التحديثات...</value>
+    <value>گەڕان بۆ نوێکردنەوە...</value>
   </data>
   <data name="aboutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 22</value>
+    <value>231, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>حول...</value>
+    <value>دەربارە...</value>
   </data>
   <data name="downloadUpdateToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>91, 20</value>
+    <value>124, 20</value>
   </data>
   <data name="downloadUpdateToolStripMenuItem.Text" xml:space="preserve">
-    <value>تحميل التحديث</value>
+    <value>دابەزاندنی نوێکردنەوە</value>
   </data>
   <data name="buttonUpdatePresence.Text" xml:space="preserve">
-    <value>تحديث الحالة</value>
+    <value>نوێکردنەوەی شێواز</value>
   </data>
   <data name="buttonUpdatePresence.ToolTip" xml:space="preserve">
-    <value>يحدث الحالة.</value>
+    <value>شێوازەکەت نوێدەکاتەوە.</value>
   </data>
   <data name="buttonConnect.Text" xml:space="preserve">
-    <value>اتصال</value>
+    <value>پەیوەندی کردن</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
-    <value>ربط التطبيق برقم هويه محدد مع الحالة.</value>
+    <value>ئەمە پەیوەندی بەرنامەکەت لەگەڵ ئایدیەکەت دەکات.</value>
   </data>
   <data name="buttonDisconnect.Text" xml:space="preserve">
-    <value>انقطاع الاتصال</value>
+    <value>پچڕان</value>
   </data>
   <data name="buttonDisconnect.ToolTip" xml:space="preserve">
-    <value>انقطاع اتصال التطبيق من الديسكورد. ملحوظه هذي العمليه من المحتمل ان تاخذ وقت.</value>
+    <value>پەیوەندی بەرنامەکە دەپچڕێنێت لەگەڵ دیسکۆرد، تکایە ئاگەدار بە لەوانەیە کەمێکی پێ بچێت.</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
-    <value>رقم المعرف من التطبيق من موقع مبرمجين الديسكورد.</value>
+    <value>ئایدی بەرنامەکەت لە  پەڕەی پەرەپێدەرانی دیسکۆرد.</value>
   </data>
   <data name="labelDetails.ToolTip" xml:space="preserve">
-    <value>اول صف في الحالة.</value>
+    <value>یەکەم هێڵی شێوازەکەت.</value>
   </data>
   <data name="labelState.ToolTip" xml:space="preserve">
-    <value>ثاني صف في الحالة.</value>
+    <value>دووەم هێڵی شێوازەکەت.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>اسم المساعد التابع لصورة الصغيرة.</value>
+    <value>ناوی ئاسێتی وێنەی بچووک.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
-    <value>الرساله مكتوبة عندما وضع الماوس علي الصورة الصغيرة.</value>
+    <value>ئەو نووسینەی کاتێک ماوسەکەت ئەخەیتە سەر وێنە بچووکەکە.</value>
   </data>
   <data name="labelLargeText.ToolTip" xml:space="preserve">
-    <value>الرسالة مكتوبة عندما وضع الماوس علي الصورة الكبيرة.</value>
+    <value>ئەو نووسینەی کاتێک ماوسەکەت ئەخەیتە سەر وێنە گەورەکە.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>اسم المساعد التابع لصورة الكبيرة.</value>
-  </data>
-  <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 14</value>
+    <value>ناوی ئاسێتی وێنەی گەورە.</value>
   </data>
   <data name="labelSmall.Text" xml:space="preserve">
-    <value>صورة صغيرة</value>
+    <value>وێنەی بچووک</value>
   </data>
   <data name="labelSmall.ToolTip" xml:space="preserve">
-    <value>الصورة التي تظهر في الجزء الاسفل الايمن لزاوية الصورة الكبيرة.</value>
+    <value>ئەو وێنەیەی بە بچووکی لای ڕاستی خوارەوەی وێنە گەورەکە دیار دەبێت.</value>
   </data>
   <data name="labelLarge.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 14</value>
+    <value>68, 14</value>
   </data>
   <data name="labelLarge.Text" xml:space="preserve">
-    <value>صورة كبيرة</value>
+    <value>وێنەی گەورە</value>
   </data>
   <data name="labelLarge.ToolTip" xml:space="preserve">
-    <value>الصورة التي تظهر علي شمال الكتابة في الاعلي.</value>
+    <value>ئەو وێنەیەی کە لای چەپی ئەو نووسینەی سەرەوە دیار دەبێت.</value>
   </data>
   <data name="radioButtonNone.Location" type="System.Drawing.Point, System.Drawing">
-    <value>277, 4</value>
+    <value>292, 4</value>
   </data>
   <data name="radioButtonNone.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 18</value>
+    <value>45, 18</value>
   </data>
   <data name="radioButtonNone.Text" xml:space="preserve">
-    <value>لا شي</value>
+    <value>هیچ</value>
   </data>
   <data name="radioButtonNone.ToolTip" xml:space="preserve">
-    <value>ايقاف الوقت الفعلي.</value>
+    <value>هیچ مۆرێکی کات چالاک نەکراوە.</value>
   </data>
   <data name="radioButtonStartTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>209, 28</value>
+    <value>142, 28</value>
   </data>
   <data name="radioButtonStartTime.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 18</value>
+    <value>195, 18</value>
   </data>
   <data name="radioButtonStartTime.Text" xml:space="preserve">
-    <value>منذ بداية CustomRP</value>
+    <value>لەو کاتەوەی CustomRP داگرساوە</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
-    <value>اظهار الوقت منذ بداية التطبيق.</value>
+    <value>ئەو کاتە پیشان دەدات کاتێک بەرنامەکە داگرساوە.</value>
   </data>
   <data name="radioButtonLocalTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>247, 52</value>
+    <value>248, 52</value>
   </data>
   <data name="radioButtonLocalTime.Size" type="System.Drawing.Size, System.Drawing">
-    <value>90, 18</value>
+    <value>89, 18</value>
   </data>
   <data name="radioButtonLocalTime.Text" xml:space="preserve">
-    <value>وقتك المحلي</value>
+    <value>کاتی ناوخۆت</value>
   </data>
   <data name="radioButtonLocalTime.ToolTip" xml:space="preserve">
-    <value>اظهار وقتك الحالي بصيغة 24.</value>
+    <value>کاتەکەی تۆ پیشان دەدات بە کاتژمێری ٢٤ی.</value>
   </data>
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
-    <value>اعداد صيغة الوقت للحالة التي تظهر اسفل الكتابة ف اعلي.
-وقت الحالة في الديسكورد يستخدم صيغة 24 ساعه بمعني عند انتهاء 24 ساعه سيعود الوقت الى 0:00.</value>
+    <value>کاتێکی مۆر کراو پیشان دەدات بۆ ستاتوسی دیسکۆردەکەت، کە لە خوار هەموو ئەو نووسینانەی سەرەوە دەبێت.
+کاتی دۆخی دیسکۆردەکەت ٢٤ کاتژمێرە، بەو واتایەی کە بوو بە ٢٤ کاتژمێر دەگەڕێتەوە بۆ ٠٠:٠٠.</value>
   </data>
   <data name="labelParty.ToolTip" xml:space="preserve">
-    <value>عدد اللاعبين في البارتي الحالي الذي يظهر بجانب حقل State.
-لاخذ تاثير كلا الحقلين يجب ان يكونوا الحقلين اكثر من 0.</value>
+    <value>ژمارەی ئەو یاریزانانەی کە لە تەنیشت ستەیتەوەیە پیشان دەدات.
+بۆ ئەوەی پیشان بدرێت دەبێت هەردوو بەشەکە لە سفر زیاتر بن.</value>
   </data>
   <data name="radioButtonCustom.Location" type="System.Drawing.Point, System.Drawing">
-    <value>218, 75</value>
+    <value>174, 75</value>
   </data>
   <data name="radioButtonCustom.Size" type="System.Drawing.Size, System.Drawing">
-    <value>119, 18</value>
+    <value>163, 18</value>
   </data>
   <data name="radioButtonCustom.Text" xml:space="preserve">
-    <value>صيغه وقت مخصصة</value>
+    <value>کاتێکی مۆرکراو بە دڵی خۆت</value>
   </data>
   <data name="radioButtonCustom.ToolTip" xml:space="preserve">
-    <value>اظهار كمية الوقت التي مرت او باقي من التاريخ في الاسفل.</value>
+    <value>ئەو کاتە پیشان دەدات کە تێپەڕیوە لێی یاخود ماویەتی بۆ ئەو بەروارەی لە خوارەوە دانراوە.</value>
   </data>
   <data name="labelButton1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>33, 14</value>
+    <value>82, 14</value>
   </data>
   <data name="labelButton1.Text" xml:space="preserve">
-    <value>الزر 1</value>
+    <value>دوگمەی یەکەم</value>
   </data>
   <data name="labelButton1.ToolTip" xml:space="preserve">
-    <value>اول زر من الزررين الذي يظهر اسفل حالتك في صفحتك يظهر علي اليمين في الصفحة المكتملة.</value>
+    <value>ئەو دوو دوگمەیەی کە لە ژێر ستاتوسی دیسکۆردەکەت پیشان دەدرێت کاتێک کلیکی لێ دەکەیت.</value>
   </data>
   <data name="labelButton2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>33, 14</value>
+    <value>81, 14</value>
   </data>
   <data name="labelButton2.Text" xml:space="preserve">
-    <value>الزر 2</value>
+    <value>دوگمەی دووەم</value>
   </data>
   <data name="labelButton2.ToolTip" xml:space="preserve">
-    <value>الزر الثاني الذي يظهر اسفل الزر الاول او بدلا منه اذا الزر اول لم ينوجد.</value>
+    <value>دووەم دوگمە کە لە ژێر دوگمەی یەکەمەوە دیار دەبێت، یاخود یەکەم دوگمە ئەگەر یەکەمت دانەنابێت.</value>
   </data>
   <data name="labelButton1URL.ToolTip" xml:space="preserve">
-    <value>رابط الصفحة الموضوع علي الزر الذي سياخذ المستخدم الى الصفحة بالضغظ عليه.</value>
+    <value>ئەو ڵێنکەی کە بەکارهێنەر دەبات بۆی.</value>
   </data>
   <data name="labelButton2URL.ToolTip" xml:space="preserve">
-    <value>رابط الصفحة الموضوع علي الزر الذي سياخذ المستخدم الى الصفحة بالضغظ عليه.</value>
+    <value>ئەو ڵێنکەی کە بەکارهێنەر دەبات بۆی.</value>
   </data>
   <data name="labelButton1Text.ToolTip" xml:space="preserve">
-    <value>كتابة الزر الاول.</value>
+    <value>ناوی دوگمەی یەکەم.</value>
   </data>
   <data name="labelButton2Text.ToolTip" xml:space="preserve">
-    <value>كتابة الزر الثاني.</value>
+    <value>ناوی دوگمەی دووەم.</value>
   </data>
   <data name="labelPartyOf.Size" type="System.Drawing.Size, System.Drawing">
-    <value>23, 14</value>
+    <value>17, 14</value>
   </data>
   <data name="labelPartyOf.Text" xml:space="preserve">
-    <value>من</value>
+    <value>لە</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
